--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         resetBall() {
           this.ball.setVelocity(0);
-          this.ball.setPosition(this.paddle.x, 500);
+          this.ball.setPosition(this.paddle.x, this.paddle.y - this.paddle.displayHeight / 2 - this.ball.displayHeight / 2);
           this.ball.setData("onPaddle", true);
         }
 
@@ -237,3 +237,51 @@
     </script>
   </body>
 </html>
+
+//space to store code
+class SpaceBreakout extends Phaser.Scene {
+  constructor() {
+      super({ key: "SpaceBreakout" });
+
+      this.aliens;
+      this.initialAlienPositions = []; // Array to store initial positions of aliens
+      // Other properties...
+  }
+
+  create() {
+      // Enable world bounds, but disable the floor
+      this.physics.world.setBoundsCollision(true, true, true, false);
+
+      // Create the aliens (formerly bricks) in a 10x3 grid that moves
+      this.aliens = this.physics.add.group({
+          key: "assets",
+          frame: ["yellow1", "white1", "red1"],
+          frameQuantity: 7,
+          gridAlign: { width: 7, height: 3, cellWidth: 150, cellHeight: 90, x: 112, y: 50 },
+      });
+
+      // Store initial positions of aliens
+      this.aliens.children.iterate((alien) => {
+          this.initialAlienPositions.push({ x: alien.x, y: alien.y });
+      });
+
+      // Other initialization code...
+  }
+
+  resetLevel() {
+      this.resetBall();
+
+      // Reset the position of each alien to its initial position
+      this.aliens.children.each((alien, index) => {
+          const initialPosition = this.initialAlienPositions[index];
+          alien.setPosition(initialPosition.x, initialPosition.y);
+          alien.enableBody(false, 0, 0, true, true);
+      });
+
+      // Reset alien movement
+      this.aliens.setVelocityX(50);
+  }
+
+  // Other methods...
+}
+
