--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
           this.ball.setData("onPaddle", true);
         }
 
+        //the ball won't show up again if it falls out of bounds once
         resetLevel() {
           this.resetBall();
 
