--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           console.log("Before disabling laser:", laser.active, laser.visible);
           laser.disableBody(true, true);
 
-          console.log("After disabling laser:", laser.active, laser.invisible);
+          console.log("After disabling laser:", laser.active, laser.visible);
           // Handle paddle hit by laser if needed, e.g., lose life, reset ball, etc.
         }
       }
