--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           if (aliens.length > 0) {
             const alien = Phaser.Utils.Array.GetRandom(aliens);
             if (alien) {
-              const laser = this.lasers.create(alien.x, alien.y + 16, "assets", "laser").setVelocityY(200);
+              const laser = this.lasers.create(alien.x, alien.y + 16,"monsterbullet").setVelocityY(200);
               laser.setCollideWorldBounds(true);
               laser.body.onWorldBounds = true;
               this.physics.world.on("worldbounds", (body, up, down, left, right) => {
