--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
       };
 
       const game = new Phaser.Game(config);
-    </script>
+      </script>
+    <script src="phaser.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
